--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root{
+  height: 100%S;
+}
+#root{
+  display: flex;
+  flex-direction: column;
+}
+
+.header{
+  display: flex;
+  background-color: rgb(121, 77, 162);
+  justify-content: space-between;
+
+}
+
+.header_marca{
+  display: flex;
+}
+
+.header img{
+  margin-left: 1rem;
+}
+
+.header_titulo{
+  color: black;
+  
+  padding: 1rem;
+
+}
+
+.navBar{
+  display: flex;
+  margin-right: 4rem;
+  padding: 1rem;
+  align-items: center;
+  width: 40rem;
+  justify-content: space-around;
+}
+.NavBar_BarraBusqueda{
+  display: flex;
+  width: 40%;
+  justify-content: space-around;
+}
+
+.NavBar_Categorias{
+  display: flex;
+  width: 40%;
+  justify-content: space-around;
+  margin-left: 2rem;
+  margin-right: 1rem
+}
+.NavBar_Categorias button{
+  padding: 0.2rem;
+  border-radius: 0.5rem;
+}
+.navBar .CartWidget{
+  display: flex;
+}
+
+.navBar .CartWidget .notificacion{
+  background-color: black;
+  color: beige;
+  height: 20%;
+  padding: 0.2rem;
+  border-radius: 1rem;
+}
+main{
+  height: 85.3vh;
+}
+
+.footer{
+  background-color: rgb(121, 77, 162);
+  height: 3rem;
+  display: flex;
+  align-items: center;
 }
