--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -57,6 +57,13 @@ height: 2rem;
 border-radius: 15px;
 z-index: -0.3;
 }
+
+.navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Input_Busqueda::placeholder{
+    color: #999999;
+    font-size: 14px;
+    font-family: Arial, sans-serif;
+    text-indent: 15px; 
+}
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Submit_Lupa{
 position: relative;
 right: 1.6rem;
@@ -68,35 +75,49 @@ display: flex;
 position: relative;
 top: 0.5rem;
 justify-content: space-around;
+border: 2px solid black;
+border-radius: 15px;
 
 
 }
-.navBar .NavBar_Contenedor .NavBar_Categorias button{
+.navBar .NavBar_Contenedor .NavBar_Categorias .btn{
 padding: 0.2rem;
-padding-left: 0.5rem;
-padding-right: 0.5rem;
-border-radius: 0.5rem;
+padding-left: 2rem;
+padding-right: 2rem;
+
+border: 0;
+background-color: rgba(108, 13, 196, 0);
+font-size: medium;
+}
+
+.btn:hover{
+    text-shadow: 3px 3px black ;
+    color: white;
+    opacity: 0.5;
+    cursor: pointer;
 }
 
 .navBar .CartWidget{
 display: flex;
-
+position: relative;
+bottom: 1rem;
 }
 
 .navBar .CartWidget img{
-    
+   
     margin-left: 0px;
-    position: relative;
-    bottom: 0.8rem;
+    
 
 }
 
 .navBar .CartWidget .notificacion{
-background-color: black;
+background-color: rgb(0, 0, 0);
 color: beige;
 height: 20%;
+width: 1.4rem;
 padding: 0.2rem;
 border-radius: 1rem;
 position: relative;
-bottom: 15px;
+bottom: 8px;
+text-align: center;
 }
