--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,17 @@
     display: flex;
     background-color: rgb(121, 77, 162);
     justify-content: space-around;
-    padding: 1rem;
-  
+    padding: 1.3rem;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.8);
+    user-select: none;
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
+    
+}
+
+.Link{
+    text-decoration: none;
 }
   
 .header_marca{
@@ -12,91 +21,148 @@
 }
   
 .header img{
-margin-left: 1rem;
+
+    margin-left: 1rem;
+
 }
 
 .header_titulo{
-color: black;
 
-padding: 1rem;
+    color: black;
+
+    padding: 1rem;
 
 }
 
 .navBar{
-display: flex;
-margin-right: 8rem;
 
-align-items: center;
-width: 50rem;
+    display: flex;
+    margin-right: 8rem;
+    align-items: center;
+    width: 50rem;
 
 }
 
 .navBar .NavBar_Contenedor{
 
-margin-right: 5rem;
-width: 50rem;
+    margin-right: 5rem;
+    width: 50rem;
     
 }
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda{
-display: flex;
 
+    display: flex;
 
 }
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda{
-display: flex;
-align-items: center;
-justify-content: center;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Input_Busqueda{
 
-width: 50rem;
-height: 2rem;
-border-radius: 15px;
-z-index: -0.3;
+    width: 50rem;
+    height: 2rem;
+    border-radius: 15px;
+    z-index: -0.3;
+    
 }
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Input_Busqueda::placeholder{
     color: #999999;
     font-size: 14px;
     font-family: Arial, sans-serif;
-    text-indent: 15px; 
+    text-indent: 10px; 
 }
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Submit_Lupa{
-position: relative;
-right: 1.6rem;
-z-index: 1;
-height: 1.6rem;
+    position: relative;
+    right: 1.9rem;
+    z-index: 1;
+    height: 1.6rem;
 }
 .navBar .NavBar_Contenedor .NavBar_Categorias{
-display: flex;
-position: relative;
-top: 0.5rem;
-justify-content: space-around;
-border: 2px solid black;
-border-radius: 15px;
-
-
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    top: 0.5rem;
+    justify-content: space-around;
+    border: 2px solid black;
+    border-radius: 15px;
+    height: 1.7rem;
+    transition: height 0.7s ease;
 }
-.navBar .NavBar_Contenedor .NavBar_Categorias .btn{
-padding: 0.2rem;
-padding-left: 2rem;
-padding-right: 2rem;
 
-border: 0;
-background-color: rgba(108, 13, 196, 0);
-font-size: medium;
+.navBar .NavBar_Contenedor .NavBar_Categorias:hover{
+    height: 6.3rem;
+}
+
+.navBar .NavBar_Contenedor .NavBar_Categorias{
+    display: flex;
+
+    justify-content: space-around;
+}
+
+
+
+.navBar .NavBar_Contenedor .NavBar_Categorias .btn{
+    padding: 0.2rem;
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+    transition: transform 0.2s ease-in-out;
+    border: 0;
+    background-color: rgba(108, 13, 196, 0);
+    font-size: medium;
+    
 }
 
 .btn:hover{
-    text-shadow: 3px 3px black ;
+    text-shadow: 2px 2px black ;
     color: white;
-    opacity: 0.5;
+    
     cursor: pointer;
+    
 }
 
+
+.btn:active{
+    transform: scale(0.70); 
+}
+
+
+.navBar .NavBar_Categorias .NavBar_SubCategorias{
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
+.navBar .NavBar_Categorias .NavBar_SubCategorias .btnSub{
+    background-color: hsla(240, 67%, 94%, 0);
+    border: 0;
+    font-size: medium;
+    padding: 0.2rem;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    position: relative;
+    left: 3.28rem;
+    
+}
+
+.navBar  .NavBar_Categorias .Link:hover  .btnSub {
+    opacity: 1;
+    visibility: visible;
+}
+
+.navBar .NavBar_SubCategorias .btnSub:hover{
+    text-shadow: 2px 2px black ;
+    color: white;
+   
+}
 .navBar .CartWidget{
 display: flex;
 position: relative;
