--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,14 @@
 }
 
 html, body, #root{
-  height: 100%S;
+  margin: 0;
+  padding: 0;
 }
 #root{
   display: flex;
   flex-direction: column;
 }
+
+
 
 
