--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,61 @@
 
 .footer{
-  background-color: rgb(121, 77, 162);
-  height: 3rem;
+  background-image: url(/public/assets/fondoFooter3.png);
+  height: 15rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  
   box-shadow: 0 0px 10px 4px hsla(0, 0%, 0%, 0.8);
+}
+
+.footer .formasDePago{
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 1rem;
+  border-radius: 15px ;
+
+}
+.footer .formasDePago h4{
+  
+  padding-left: 0.5rem;
+}
+.footer .RedesSociales{
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-around;
+  background-color: rgba(255, 255, 255, 0.7);
+  height: 10rem;
+  padding: 1rem;
+  border-radius: 15px ;
+  width: 17.5rem;
+}
+
+.footer .RedesSociales h4{
+  
+  padding-left: 0.9rem;
+  position: relative;
+  bottom: 1rem;
+}
+
+.footer .RedesSociales .imgSociales{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  position: relative;
+  bottom: 1.2rem;
+  justify-content: space-around;
+  
+
+}
+
+.footer .derechos{
+  height: 9rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
