--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,51 +1,71 @@
 
 .header{
     display: flex;
-    background-color: rgb(121, 77, 162);
-    justify-content: space-around;
-    padding: 1.3rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.8);
+    background-color: rgb(255, 255, 255, 0.8);
+    justify-content: center;
+    margin: 1.3rem;
+    justify-self: center;
     user-select: none;
     position: fixed;
-    width: 100vw;
+    width: 95%;
     z-index: 2;
+    align-self: center;
+    border-radius: 10px;
     
 }
 
 .Link{
     text-decoration: none;
+    height: 100%;
+   
+    
+}
+
+.Link_marca{
+    text-decoration: none;
+    position: absolute;
+    right: 80.3rem;
+    bottom: 0;
+    height: 100%;
+    background-image: url(/public/assets/logoBackground.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
   
 .header_marca{
     display: flex;
+    
 }
   
-.header img{
 
-    margin-left: 1rem;
-
-}
 
 .header_titulo{
 
-    color: black;
-
+    color: rgb(255, 255, 255);
+    font-size:2.5rem;
     padding: 1rem;
+    height: 100%;
+    
 
 }
 
 .navBar{
 
     display: flex;
-    margin-right: 8rem;
+    justify-content: space-around;
     align-items: center;
-    width: 50rem;
-
+    width: 80rem;
+    
+   
+    
 }
 
 .navBar .NavBar_Contenedor{
 
-    margin-right: 5rem;
+    padding: 0.5rem;
+    padding-bottom: 1rem;
     width: 50rem;
     
 }
@@ -53,7 +73,7 @@
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda{
 
     display: flex;
-
+    width: 100%;
 }
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda{
@@ -66,8 +86,8 @@
 
 .navBar .NavBar_Contenedor .NavBar_BarraBusqueda .Formulario_Busqueda .Input_Busqueda{
 
-    width: 50rem;
-    height: 2rem;
+    width: 55.05rem;
+    height: 1.9rem;
     border-radius: 15px;
     z-index: -0.3;
     
@@ -95,6 +115,8 @@
     border-radius: 15px;
     height: 1.7rem;
     transition: height 0.7s ease;
+    width: 55.05rem;
+    
 }
 
 .navBar .NavBar_Contenedor .NavBar_Categorias:hover{
@@ -134,14 +156,14 @@
 }
 
 
-.navBar .NavBar_Categorias .NavBar_SubCategorias{
+.navBar .NavBar_Categorias  .NavBar_SubCategorias{
     display: flex;
     flex-direction: column;
     
     
 }
 
-.navBar .NavBar_Categorias .NavBar_SubCategorias .btnSub{
+.navBar .NavBar_Categorias   .NavBar_SubCategorias a .btnSub{
     background-color: hsla(240, 67%, 94%, 0);
     border: 0;
     font-size: medium;
@@ -153,7 +175,11 @@
     
 }
 
-.navBar  .NavBar_Categorias .Link:hover  .btnSub {
+.navBar  .NavBar_Categorias .categoriaPintura:hover  .btnSub {
+    opacity: 1;
+    visibility: visible;
+}
+.navBar  .NavBar_Categorias .categoriaHerramienta:hover  .btnSub {
     opacity: 1;
     visibility: visible;
 }
@@ -164,9 +190,11 @@
    
 }
 .navBar .CartWidget{
-display: flex;
-position: relative;
-bottom: 1rem;
+    display: flex;
+    position: relative;
+    top: 20px
+
+
 }
 
 .navBar .CartWidget img{
@@ -181,7 +209,7 @@ background-color: rgb(0, 0, 0);
 color: beige;
 height: 20%;
 width: 1.4rem;
-padding: 0.2rem;
+padding: 0.3rem;
 border-radius: 1rem;
 position: relative;
 bottom: 8px;
