--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,15 @@
 html, body, #root{
   margin: 0;
   padding: 0;
+  font-family: 'Bitter', serif;
+
 }
 #root{
   display: flex;
   flex-direction: column;
 }
 
-
-
+body{
+  background-image: url(/public/assets/fondoBody2.png);
+}
 
