--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ html, body, #root{
   margin: 0;
   padding: 0;
   font-family: 'Bitter', serif;
+  width: 100vw;
+  background-image: url(/public/assets/fondos/fondoBody.png);
 
 }
 #root{
@@ -15,7 +17,5 @@ html, body, #root{
   flex-direction: column;
 }
 
-body{
-  background-image: url(/public/assets/fondoBody2.png);
-}
+
 
