--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -16,6 +16,23 @@
   }
 
   
+@keyframes sliderAnimacion{
+
+    0%{margin-left: 0%}
+    20%{margin-left: 0%}
+
+    25%{margin-left: 100%}
+    45%{margin-left: 100%}
+
+    50%{margin-left: 200%}
+    70%{margin-left: 200%}
+
+    75%{margin-left: 300%}
+    95%{margin-left: 300%}
+
+}
+
+
 p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -643,7 +660,7 @@ button{
 .articleNosotros1{
     background-color: rgba(255, 255, 255, 0.7);
     width: 29rem;
-    height: 30rem;
+    height: 34rem;
     position: relative;
     top: 5rem;
     display: flex;
@@ -674,15 +691,60 @@ button{
 .divNosotros1{
     
     width: 26.5rem;
-    height: 26.5rem;
-    background-color: rgba(255, 255, 255, 0.7);;
+    height: 31rem;
+    background-color: rgba(255, 255, 255, 0.7);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.divNosotros1 .sliderContainer{
+
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.divNosotros1 .sliderContainer div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    
+    
+    
+    
+}
+
+
+
+.divNosotros1 .sliderContainer .sliderImagen{
+    width: 100%;
+    display: flex;
+    max-height: max-content;
+    opacity: 0;
+    transition: 2s;
+    height: 100%;
+    object-fit:contain;
+    
+}
+.divNosotros1 .sliderContainer .sliderImagen.loaded{
+    
+    opacity: 1;
+    
+    
 }
 
 .divNosotros2{
     
     width: 17rem;
     height: 26.5rem;
-    background-color: rgba(255, 255, 255, 0.7);;
+    background-color: rgba(255, 255, 255, 0.7);
+    
 }
 
 .divNosotros3{
@@ -945,3 +1007,4 @@ button{
     display: flex;
     justify-content: space-between;
 }
+
